# CGEO

./: .gitignore  CLAUDE.md  CMakeLists.txt  MANIFEST.in  README.md  cgeo_architecture.drawio  pyproject.toml  requirements.txt  run.sh  runSetup.sh  setup.py
.github/workflows/: cmake-single-platform.yml  wheel.yml
2D/: 2D_bindings.cpp  2D_bindings.h  Exception2D.cpp
2D/Algorithms_2D/: CMakeLists.txt  ConvexHull2D.cpp  ConvexHull2D.h  SegmentIntersection2D.cpp  SegmentIntersection2D.h  SmallestEnclisingDisk.cpp  SmallestEnclisingDisk.h  SmallestEnclosingDisk.cpp  SmallestEnclosingDisk.h  Triangulation2D.cpp  Triangulation2D.h
2D/Shapes_2D/: CMakeLists.txt  Circle2d.cpp  Circle2d.h  Line2d.cpp  Line2d.h  Point2d.cpp  Point2d.h  Polygon.cpp  Polygon.h  Segment2d.cpp  Segment2d.h  Triangle2d.cpp  Triangle2d.h
3D/: Face3d.cpp  Face3d.h  Point3d.cpp  Point3d.h
DataStructures/: BBST.cpp  BBST.h  Node.h  SegmentBalancedTree.cpp  SegmentBalancedTree.h  TreeNode.cpp  TreeNode.h
cgeo/: __init__.py
cgeo/modules/: circle.py  point_2d.py  polygon.py  segment_2d.py  triangle.py
cgeo/py_test/: convex_hull_2d.py  enclosing_disc_2d.py  point_2d.py  polygon.py  segment_2d.py  segment_intersection_2d.py  triangulation_2d.py  y_monotone_decomposision.py
cgeo/utilities/: get_random_polygon.py  get_vector_type.py
cgeo/utilities/c_utilities/: global_c_utils.py
examples/Plots2D/: CirclePlot.py  PolygonPlot.py  SegmentsPlot.py
examples/py_test/: EnclosingDisc2d.py  SegmentIntersection.py  SegmentTree.py  Triangulation2d.py  convex_hull2d.py  point2d.py  polygon.py  run_test.sh  segment2d.py  y_monotone_decomposision.py
examples/src/: Point2D.py  Segment2D.py
py_src/cgeo/modules/: circle.py  point_2d.py  polygon.py  segment_2d.py  triangle.py
py_src/cgeo/py_test/: convex_hull_2d.py  enclosing_disc_2d.py  point_2d.py  polygon.py  segment_2d.py  segment_intersection_2d.py  triangulation_2d.py  y_monotone_decomposision.py
py_src/cgeo/utilities/c_utilities/: global_c_utils.py
py_src/modules/: Point2D.py  Segment2D.py  circle.py  point_2d.py  polygon.py  segment_2d.py  triangle.py
py_src/plots_2d/: circle_plot.py  polygon_plot.py  segments_plot.py
py_src/py_test/: convex_hull_2d.py  enclosing_disc_2d.py  point_2d.py  polygon.py  segment_2d.py  segment_intersection_2d.py  triangulation_2d.py  y_monotone_decomposision.py
py_src/utilities/: get_vector_type.py
py_src/utilities/c_utilities/: global_c_utils.py
py_src/utilities/error_handling/: error_utilities.py
src/: main.cpp
src/2D/: 2D_bindings.cpp  2D_bindings.h  Exception2D.h
src/2D/Algorithms_2D/: SegmentIntersection2D.cpp  SmallestEnclosingDisk.cpp  Triangulation2D.cpp
src/2D/Shapes_2D/: Circle2d.h  Line2d.cpp  Polygon.cpp  Segment2d.h
src/2D/algorithms_2D/: CMakeLists.txt  ConvexHull2D.cpp  ConvexHull2D.h  SegmentIntersection2D.cpp  SegmentIntersection2D.h  SmallestEnclosingDisk.cpp  SmallestEnclosingDisk.h  Triangulation2D.cpp  Triangulation2D.h
src/2D/shapes_2D/: CMakeLists.txt  Circle2d.cpp  Circle2d.h  Line2d.cpp  Line2d.h  Point2d.cpp  Point2d.h  Polygon.cpp  Polygon.h  Segment2d.cpp  Segment2d.h  Triangle2d.cpp  Triangle2d.h
src/3D/: Face3d.h  Point3d.h
src/DataStructures/: CMakeLists.txt  Node.h  SegmentBalancedTree.h
src/data_structures/: CMakeLists.txt  Node.h  SegmentBalancedTree.cpp  SegmentBalancedTree.h
tests/: convex_hull_test.py  polygon_size_tests.json
