[project]
name = "cgeo"
version = "0.0.1"
authors = [
  { name="Tom Sabala", email="sabala144@gmail.com" },
]
description = "Open source package for computational geometry"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Operating System :: Unix",
]

[project.urls]
"Homepage" = "https://github.com/tomsabala/CGEO"
"Bug Tracker" = "https://github.com/tomsabala/CGEO/issues"